fixed overflow setting on a form element

--- a/css/style.styl
+++ b/css/style.styl
@@ -223,6 +223,7 @@ form
     margin-bottom: .5em
 
 .input-prepend
+  overflow: hidden
   height: 38px
   margin-top: .5em
   box-sizing: border-box
